tests/ty-var-scope/out.txt
error: mismatched types: int vs string
  ┌─ inp.sml:1:25
  │
1 │ val _ = fn id => (id 3; id "nope")
  │                         ^^^^^^^^^

typechecking failed
